--- a/article.html
+++ b/article.html
@@ -7,7 +7,7 @@
     <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"
 ></script>
     <link rel="stylesheet" href="style.css">
-    <title>document</title>
+    <title>how to build a pc?</title>
 </head>
 <body>
     <nav class="navbar">
