--- a/article.html
+++ b/article.html
@@ -19,9 +19,9 @@
         </a>
         <div class="navbar-links" data-show="hide">
             <ul>
-                <li><a href="#">Home Page</a></li>
-                <li><a href="#">build your own pc</a></li>
-                <li><a href="#">Brows Items</a></li>
+                <li><a href="article.html">Home Page</a></li>
+                <li><a href="buildpc.html">build your own pc</a></li>
+                <li><a href="browsItems.html">Brows Items</a></li>
             </ul>
         </div>
     </nav>
