--- a/buildpc.html
+++ b/buildpc.html
@@ -19,7 +19,7 @@
             <ul>
                 <li><a href="article.html">Home Page</a></li>
                 <li><a href="buildpc.html">build your own pc</a></li>
-                <li><a href="browsItems.html">Brows Items</a></li>
+                <li><a href="price-ranges.html">Price ranges</a></li>
             </ul>
         </div>
     </nav>
@@ -27,7 +27,7 @@
         <!-- ==========================> CPU <======================================= -->
 
         <div class="components-card active" data-comp="cpu" id="1">
-            <h2>Choose a CPU:</h2>
+            <h2>CPU :</h2>
             <div class="component">
                 <img src="https://c1.neweggimages.com/ProductImage/19-118-357-03.jpg">
                 <div class="component-details">
@@ -62,7 +62,7 @@
         <!-- ==========================> GPU <======================================= -->
 
         <div class="components-card" data-comp="gpu" id="2">
-            <h2>Choose a GPU:</h2>
+            <h2>GPU :</h2>
             <div class="component">
                 <img src="https://c1.neweggimages.com/ProductImageCompressAll300/14-932-020-05.png">
                 <div class="component-details">
@@ -107,7 +107,7 @@
         <!-- ==========================> Motherboard <======================================= -->
 
         <div class="components-card" data-comp="motherboard" id="3">
-            <h2>Choose a motherboard:</h2>
+            <h2>Motherboard :</h2>
             <div class="component">
                 <img src="https://c1.neweggimages.com/ProductImageCompressAll300/13-157-974-01.jpg">
                 <div class="component-details">
@@ -142,7 +142,7 @@
         <!-- ==========================> RAM <======================================= -->
 
         <div class="components-card" data-comp="ram" id="4">
-            <h2>Choose a RAM:</h2>
+            <h2>RAM :</h2>
             <div class="component">
                 <img src="https://c1.neweggimages.com/ProductImageCompressAll300/20-236-540-S01.jpg">
                 <div class="component-details">
@@ -177,7 +177,7 @@
         <!-- ==========================> SSD <======================================= -->
 
         <div class="components-card" data-comp="ssd" id="5">
-            <h2>Choose an SSD:</h2>
+            <h2>SSD :</h2>
             <div class="component">
                 <img src="https://c1.neweggimages.com/ProductImageCompressAll300/20-156-172-V02.jpg?ex=2">
                 <div class="component-details">
@@ -202,7 +202,7 @@
         <!-- ==========================> HDD <======================================= -->
 
         <div class="components-card" data-comp="hdd" id="6">
-            <h2>Choose an HDD:</h2>
+            <h2>Storage:</h2>
             <div class="component">
                 <img src="https://c1.neweggimages.com/ProductImageCompressAll300/22-184-773-S01.jpg?ex=2">
                 <div class="component-details">
@@ -227,7 +227,7 @@
         <!-- ==========================> PSU <======================================= -->
 
         <div class="components-card" data-comp="psu" id="7">
-            <h2>Choose a Power Supply Unit:</h2>
+            <h2>Power Supply Unit:</h2>
             <div class="component">
                 <img src="https://c1.neweggimages.com/ProductImageCompressAll300/17-438-016-11.jpg?ex=2">
                 <div class="component-details">
@@ -300,7 +300,7 @@
             <img src="">
         </div>
         <div class="pc-details">
-            <h2>Your completed build:</h2>
+            <h2>Your complet build:</h2>
             <div class="cmp" id="cpu">
                 <p class="cmp-name">Intel Core i7</p>
                 <p class="cmp-price">300&dollar;</p>
@@ -338,8 +338,10 @@
                 <span>1740&dollar;</span>
             </div>
         </div>
+        <div class="btn try-again">
+            <button>try again?</button>
+        </div>
     </div>
-    <script src="source.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
