--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <ul>
                 <li><a href="article.html">Home Page</a></li>
                 <li><a href="buildpc.html">build your own pc</a></li>
-                <li><a href="browsItems.html">Brows Items</a></li>
+                <li><a href="price-ranges.html">Price ranges</a></li>
             </ul>
         </div>
     </nav>
