--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <p>start building your dream PC NOW, Login or Sign up to get started</p>
         </div>
         <div class="buttons">
-            <a href="register.html">
+            <a href="article.html">
                 <button>Start now</button>
             </a>
             <a href="login.html">
@@ -39,7 +39,6 @@
             </a>
         </div>
     </main>
-    <!-- local javascript file -->
     <script src="source.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
